<resources>
    <string name="app_name">Criconnect</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="register_button">Don\'t have an account? <b>Register Here</b></string>
    <string name="circle_logo_description">Circle logo for my app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="try_again">Try Again</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="date">Data will be provided after backend database will be connected.
        </string>
    <string name="rating">Data will be provided after backend database will be connected.</string>
    <string name="edit">Data will be provided after backend database will be connected.
        </string>
    <string name="camera">Data will be provided after backend database will be connected.</string>
    <string name="recyclerview">Data will be provided after backend database will be connected.
    </string>
    <string name="lorem_ipsum">
        Data will be provided after backend database will be connected.
    </string>
    <string name="title_activity_player_dashboard">playerDashboard</string>
    <string name="title_activity_dashboardfororganizer">dashboardfororganizer</string>
    <string name="title_activity_tournamentdashboard">tournamentdashboard</string>
    <string name="name">Name</string>
    <string name="loading">Loading</string>
    <string name="email">Email</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="mobile">Mobile</string>
    <string name="registered_user_since">Registered user since</string>
    <string name="user_display_picture"> User display picture</string>
    <string name="location">Location : </string>
    <string name="entry_fee">Entry Fee</string>
    <string name="winning_prize">Winning Prize</string>
    <string name="register_team">Register Team</string>
    <string name="batsmanHand">Batsman Hand : </string>
    <string name="fatherName">Father Name : </string>
    <string name="playerAge">"Age : "</string>
    <string name="city">"City : "</string>
    <string name="about">"About : "</string>
    <string name="edit_team">Edit Team</string>
    <string name="belongs_to">Belongs to :</string>
    <string name="age">Age :</string>
    <string name="phone_no">Phone No :</string>
    <string name="speciality">"Speciality : "</string>
    <string name="description">"Description : "</string>
    <string name="hand">"Hand : "</string>
    <string name="delete">Delete</string>
    <string name="captainName">"Captain Name : "</string>
    <string name="homeGround">Home Ground :</string>
    <string name="noDatafound">No Data Found</string>
    <string name="kindly_rate_our_application">Kindly Rate our application.</string>
    <string name="got_it">Got It</string>
    <string name="matches_button_showcase_value">Atleast 3 teams are required to generate matches for each team.</string>
    <string name="matches">Tournament Matches</string>
    <string name="registerDetails">If you have not registered in the tournament you can do it by clicking here...</string>
    <string name="tournament">Cricketconnect</string>
    <string name="tournamentsDesc">The available tournaments will be displayed here.</string>
    <string name="profileDesc">Your team\'s profile will be displayed here.</string>

    <style name="DialogAnimation">
        <item name="android:windowEnterAnimation">@anim/slide_in</item>
        <item name="android:windowExitAnimation">@anim/slide_out</item>
    </style>

    <style name="textStyle_header">

        <item name="android:textSize">@dimen/_14sdp</item>
        <item name="android:textColor">@color/dark_red</item>
    </style>
</resources>