<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.PlayerDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrain_data_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constrain_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/backbtn_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_15sdp"
                    android:src="@drawable/back_img"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/title_player"
                    style="@style/textStyle_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/backbtn_id"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/backbtn_id" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/playerImageId"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constrain_header" />

            <TextView
                android:id="@+id/hand_header"
                style="@style/textStyle_header"
                android:textStyle="bold"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:text="@string/batsmanHand"
                app:layout_constraintBottom_toTopOf="@+id/winning_header"
                app:layout_constraintStart_toStartOf="@id/playerImageId"
                app:layout_constraintTop_toBottomOf="@+id/playerImageId" />


            <TextView
                android:id="@+id/hand_id"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_15sdp"
                android:gravity="end"
                app:layout_constraintBottom_toBottomOf="@+id/hand_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/hand_header"
                app:layout_constraintTop_toTopOf="@+id/hand_header" />


            <TextView
                android:id="@+id/entry_header"
                style="@style/textStyle_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"

                android:layout_marginVertical="@dimen/_5sdp"
                android:text="@string/fatherName"
                app:layout_constraintBottom_toTopOf="@+id/winning_header"
                app:layout_constraintStart_toStartOf="@id/hand_header"
                app:layout_constraintTop_toBottomOf="@+id/hand_header" />


            <TextView
                android:id="@+id/entry_id"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_15sdp"
                android:gravity="end"
                app:layout_constraintBottom_toBottomOf="@+id/entry_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/entry_header"
                app:layout_constraintTop_toTopOf="@+id/entry_header" />


            <TextView
                android:id="@+id/winning_header"
                style="@style/textStyle_header"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_5sdp"
                android:text="@string/playerAge"
                app:layout_constraintStart_toStartOf="@id/entry_header"
                app:layout_constraintTop_toBottomOf="@+id/entry_header" />

            <TextView
                android:id="@+id/winning_id"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_15sdp"
                android:gravity="end"
                app:layout_constraintBottom_toBottomOf="@+id/winning_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/winning_header"
                app:layout_constraintTop_toTopOf="@+id/winning_header" />


            <TextView
                android:id="@+id/city_header"
                style="@style/textStyle_header"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_5sdp"
                android:text="@string/city"
                app:layout_constraintStart_toStartOf="@id/entry_header"
                app:layout_constraintTop_toBottomOf="@+id/winning_header" />

            <TextView
                android:id="@+id/city_id"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_15sdp"
                android:gravity="end"
                app:layout_constraintBottom_toBottomOf="@+id/city_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/city_header"
                app:layout_constraintTop_toTopOf="@+id/city_header" />

            <TextView
                android:id="@+id/description_header"
                style="@style/textStyle_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_5sdp"
                android:text="@string/about"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/city_header"
                app:layout_constraintTop_toBottomOf="@+id/city_header" />


            <TextView
                android:id="@+id/description_id"
                style="@style/textStyle_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_5sdp"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/_15sdp"
                app:layout_constraintStart_toStartOf="@id/description_header"
                app:layout_constraintTop_toBottomOf="@+id/description_header" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>