<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.TeamDetailActivity">

    <ImageView
        android:id="@+id/back_btn_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:src="@drawable/back_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/lavender" />

    <TextView
        android:id="@+id/teamNameId"
        style="@style/textStyle_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/lavender"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="@+id/back_btn_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back_btn_id" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profilePhoto_id"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginVertical="30dp"
        android:scaleType="centerCrop"
        android:src="@drawable/uploadimg"
        app:layout_constraintBottom_toTopOf="@+id/captainNameId"
        app:layout_constraintEnd_toEndOf="@+id/teamNameId"
        app:layout_constraintStart_toStartOf="@+id/teamNameId"
        app:layout_constraintTop_toBottomOf="@+id/teamNameId"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />


    <TextView
        android:id="@+id/captainNameId"
        style="@style/textStyle_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/captainName"
        android:textColor="@color/lavender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePhoto_id" />

    <TextView
        android:id="@+id/captainName_txt"
        android:textColor="@color/lavender"
        style="@style/textStyle_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        app:layout_constraintBottom_toBottomOf="@+id/captainNameId"
        app:layout_constraintStart_toEndOf="@+id/captainNameId"
        app:layout_constraintTop_toTopOf="@+id/captainNameId" />

    <TextView
        android:id="@+id/cityName_id"
        style="@style/textStyle_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/city"
        android:textColor="@color/lavender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/captainNameId" />

    <TextView
        android:id="@+id/age_id"
        style="@style/textStyle_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/lavender"

        app:layout_constraintBottom_toBottomOf="@+id/cityName_id"
        app:layout_constraintStart_toStartOf="@+id/captainName_txt"
        app:layout_constraintTop_toTopOf="@+id/cityName_id" />


    <TextView
        android:id="@+id/homeGroundId"
        style="@style/textStyle_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/homeGround"
        android:textColor="@color/lavender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityName_id" />

    <TextView
        android:id="@+id/phone_id"
        style="@style/textStyle_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/lavender"

        app:layout_constraintBottom_toBottomOf="@+id/homeGroundId"
        app:layout_constraintStart_toStartOf="@+id/age_id"
        app:layout_constraintTop_toTopOf="@+id/homeGroundId" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/homeGroundId"
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/teamsRV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>