<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.TournamentDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/constrain_data_id">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constrain_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/backbtn_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_15sdp"
                    android:src="@drawable/back_img"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/title_tournament"
                    style="@style/textStyle_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/backbtn_id"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/backbtn_id" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/tournamentImageId"
                android:layout_width="match_parent"
                android:scaleType="centerCrop"
                android:layout_height="@dimen/_150sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constrain_header" />


            <TextView
                android:id="@+id/location_header"
                style="@style/textStyle_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                android:text="@string/location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tournamentImageId" />

            <TextView
                android:id="@+id/location_id"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_5sdp"
                android:ellipsize="end"
                app:layout_constraintBottom_toTopOf="@+id/entry_header"
                app:layout_constraintStart_toStartOf="@+id/location_header"
                app:layout_constraintTop_toBottomOf="@+id/location_header" />

            <TextView
                android:id="@+id/entry_header"
                style="@style/textStyle_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginVertical="@dimen/_5sdp"
                android:text="@string/entry_fee"
                app:layout_constraintBottom_toTopOf="@+id/winning_header"
                app:layout_constraintStart_toStartOf="@id/location_id"
                app:layout_constraintTop_toBottomOf="@+id/location_id" />


            <TextView
                android:id="@+id/entry_id"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_15sdp"
                android:gravity="end"
                app:layout_constraintBottom_toBottomOf="@+id/entry_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/entry_header"
                app:layout_constraintTop_toTopOf="@+id/entry_header" />


            <TextView
                android:id="@+id/winning_header"
                style="@style/textStyle_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_5sdp"
                android:text="@string/winning_prize"
                app:layout_constraintStart_toStartOf="@id/entry_header"
                app:layout_constraintTop_toBottomOf="@+id/entry_header" />

            <TextView
                android:id="@+id/winning_id"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_15sdp"
                android:gravity="end"
                app:layout_constraintBottom_toBottomOf="@+id/winning_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/winning_header"
                app:layout_constraintTop_toTopOf="@+id/winning_header" />


            <Button
                android:id="@+id/registerTeam_id"
                style="@style/textStyle_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/register_team"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/winning_header" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/teamsRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_15sdp"
                app:layout_constraintBottom_toTopOf="@+id/btn_organizeMatches"
                app:layout_constraintTop_toBottomOf="@+id/registerTeam_id" />


            <Button
                android:id="@+id/btn_organizeMatches"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="Organize Matches"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/teamsRV"
                android:layout_marginBottom="@dimen/_15sdp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>